testsuite/tests/safeHaskell/flags/SafeFlags22.stderr

SafeFlags22.hs:1:16: warning: [-Wunsafe]
    ‘SafeFlags22’ has been inferred as unsafe!
    Reason:
        SafeFlags22.hs:7:1: error:
            System.IO.Unsafe: Can't be safely imported!
            The module itself isn't safe.
